# Perfil-EI

./: README.md
GSR/: .gitignore  LICENSE  README.md  requirements.txt
GSR/src/: setup.py
GSR/src/domotics/: agent.py  data_store.py  manager.py  mib.json  mib_loader.py  pdu.py  run_applications.py  security.py
QoSI/TP4/: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  install_dependencies.sh  requirements.txt  run.sh  run_bot.sh  run_server.sh
QoSI/TP4/assets/arch_service/: netlat.service
QoSI/TP4/assets/digital_ocean/: cloud-init-example.yml  cloud-init-user-data.yml  digital_ocean_launch_options.json  user-data-example.sh  user-data.sh
QoSI/TP4/assets/manual_laucher/: config.yaml  execute.sh  run.sh  send.sh  terminate.sh
QoSI/TP4/dashboard_app/: README.md  __main__.py
QoSI/TP4/dashboard_app/static/: styles.css
QoSI/TP4/dashboard_app/templates/: dashboard.html  index.html  latency_dashboard_dns.html  latency_dashboard_http.html  latency_dashboard_rtp.html  latency_dashboard_sip.html
QoSI/TP4/datasets/: LICENSE  README.md
QoSI/TP4/datasets/mia/: channel_mia_date_01.05.2024_21h35.json  channel_mia_date_02.05.2024_20h45.json  channel_mia_date_05.05.2024_22h02.json  channel_mia_date_06.05.2024_13h43.json
QoSI/TP4/datasets/netlat-0cioLg-lying-sgp1-ubuntu-23-10-x64/: channel_netlat-0ciolg-lying-sgp1-ubuntu-23-10-x64_date_06.05.2024_13h43.json
QoSI/TP4/legion/: README.md  bots.yaml  satan.py
QoSI/TP4/legion/Rust/: .gitignore  Cargo.toml
QoSI/TP4/legion/Rust/src/: main.rs
QoSI/TP4/netlat/: README.md  __main__.py
(+171 files in other folders)
